--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/AndrewGerdel/CodeChain#readme",
   "dependencies": {
     "binstring": "^0.2.1",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
     "hex-to-dec": "^1.0.1",
     "mongoose": "^5.4.1",
     "secp256k1": "^3.6.1"
