--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "json-query": "^2.2.2",
     "mongoose": "^5.4.2",
     "request": "^2.88.0",
-    "secp256k1": "^3.6.1"
+    "secp256k1": "^3.6.1",
+    "yargs": "^12.0.5"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
