--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "http": "0.0.0",
     "json-query": "^2.2.2",
     "mongoose": "^5.4.2",
+    "pad-left": "^2.1.0",
     "request": "^2.88.0",
     "secp256k1": "^3.6.1",
     "yargs": "^12.0.5"
