Some issue where documents written to the DB are not immediately written

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "hex-to-dec": "^1.0.1",
     "http": "0.0.0",
     "json-query": "^2.2.2",
+    "mongojs": "^2.6.0",
     "mongoose": "^5.4.2",
+    "mongoskin": "^2.1.0",
     "pad-left": "^2.1.0",
     "request": "^2.88.0",
     "secp256k1": "^3.6.1",
