--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
   "database" : {
     "host" : "mongodb://localhost:27017/",
-    "database" : "CodeChain"
+    "database" : "CodeChain3"
   },
   "network" : {
     "defaultMasterNodeProtocol" : "http",
     "defaultMasterNode" : "127.0.0.1",
     "defaultMasterNodePort" : "65340",
-    "myPort" : 65340,
+    "myPort" : 65342,
     "myProtocol" : "http",
     "targetBlockTimeMs" : 10000
   },
