--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoskin": "^2.1.0",
     "pad-left": "^2.1.0",
     "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "secp256k1": "^3.6.1",
     "yargs": "^12.0.5"
   },
