So many changes.  Too many to explain in 70-ish characters.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test-debug": "mocha --inspect-brk tests/*.js",
+    "testfileService": "mocha tests/fileServiceTests.js",
     "test": "mocha tests/*.js"
   },
   "repository": {
